[package]
name = "typarena"
description = "Type-keyed arena storage with stable per-type columns."
keywords = ["arena", "type-map", "storage", "no_std"]
categories = ["data-structures", "no-std"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/typarena"

[dependencies]
hashbrown = "0.16.1"
sparse_map = "0.3.0"
indexmap = { version = "2.14", default-features = false }
